Facebook conversation threads implemented. Trying to implement Comment/Like counts in the notifications column, come across this issue: http://stackoverflow.com/questions/7122394/in-the-facebook-api-how-can-i-retrieve-the-source-object-from-a-notification-obj

--- a/style/style.css
+++ b/style/style.css
@@ -197,13 +197,6 @@ table.bigtable {
 	margin-top:5px;
 }
 
-div.convoarea {
-    display:none;
-    margin-top:35px;
-    margin-right:100px;
-    width: 100%;
-}
-
 div#replybox {
     padding:10px;
     margin:0;
@@ -226,6 +219,10 @@ td .tweettextcell {
 }
 
 .name a{
+	text-decoration:none;
+}
+
+.convolikearea a {
 	text-decoration:none;
 }
 
