--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -56,6 +56,10 @@ div#replybox {
 	color:#0099b9;
 }
 
+.convolikearea a {
+	color:#395a9d;
+}
+
 .metatext a {
 	color:#0099b9;
 }
