--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -60,6 +60,10 @@ div#replybox {
 	color:#0099b9;
 }
 
+.convolikearea a {
+	color:#395a9d;
+}
+
 .metatext a {
 	color:#0099b9;
 }
